--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,6 +50,20 @@ h2 {
     min-height: 120px;
 }
 
+/* Buttons */
+
+.custom-button{
+    background-color: #1f7798;
+    border: #1f7798;
+
+}
+
+.custom-button:hover{
+    background-color: #1d6d8a;
+    border: #1d6d8a;
+
+}
+
 /* Contact section */
 
 #contact{
